# motif

./: .clang-format  .dockerignore  .gitignore  0001-acinclude.m4-revise-AM_FUNC_VOID_SPRINTF.patch  0001-xm-add-explicit-XmTabBoxWidget-type-cast.patch  0002-acinclude.m4-include-stdlib.h-in-XTHREADS-check.patch  0002-wml-add-yylex-and-yyerror-declaration.patch  0003-mwm-add-standard-headers.patch  0003-xm-don-t-share-cached-Xft-renditions-across-display-.patch  0004-mwm-hide-SetMwmClientList-in-WSM-definition.patch  1.patch  AUTHORS  BUILD.md  CMakeLists.txt  ChangeLog  GNUmakefile  Makefile.am  README  README.md  README_update_script.md  RELEASE  RELEASE_NOTES_2.4.1.md  RELNOTES  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  index.html  libtool  mkchangelog  motif.pc.in  update_git_repos.sh
clients/mwm/WmWsmLib/: CMakeLists.txt  Makefile.am  debug.c  free.c  pack.c  recv.c  send.c  util.c  wsm_proto.h
config/util/: Makefile.am  Makefile.ini  aminstall.sh  bsdinst.sh  checktree.c  lndir.c  lndir.man  makeg.man  makestrs.c  makestrs.man  mdepend.cpp  mergelib.cpp  mkdirhier.man  x11mf.sh  xmkmf.cpp  xmkmf.man
data/bindings/: CDE  CMakeLists.txt  README  acorn  hal  hp  pc  sni_97801  sun  xmbind.alias
demos/: CMakeLists.txt  Makefile.am
demos/lib/: CMakeLists.txt  Makefile.am
demos/lib/Exm/: CMakeLists.txt  CommandB.c  CommandB.h  ExmMrm.c  ExmString.c  Grid.c  Grid.h  Makefile.am  MenuB.c  Panner.c  Panner.h  Simple.h  String.c  StringP.h  StringTrans.c  TabB.c
demos/lib/ExmCxx/: CxxCommand.cxx  CxxCommand.h  CxxGrid.cxx  CxxGrid.h  CxxSimple.cxx  CxxSimpleDemo.cxx  CxxString.cxx  CxxString.h
demos/lib/Wsm/: Makefile.am  debug.c  pack.c  recv.c  send.c  util.c  wsm_proto.h
demos/lib/XmCxx/: CxxManager.cxx  CxxManager.h  CxxPrimiti.h  CxxXmString.cxx  Imakefile
demos/lib/Xmd/: CMakeLists.txt  Help.c  HelpP.h  Makefile.am  Menus.c  Menus.h  Print.c  Print.h  RegEdit.c  RegEdit.h  RegEditI.h  helpOn.help  onHelp.c
demos/programs/: CMakeLists.txt  Makefile.am
demos/programs/ButtonBox/: Makefile.am  Makefile.am.rej  bboxdemo.c
demos/programs/ColorSel/: Makefile.am  Makefile.am.orig  Makefile.am.rej  colordemo  colordemo.c  util-c.c
demos/programs/Column/: Makefile.am  Makefile.am.orig  Makefile.am.rej  column.c
demos/programs/Combo2/: Makefile.am  Makefile.am.orig  Makefile.am.rej  combo.c
demos/programs/Exm/: Makefile.am  README
demos/programs/Ext18List/: Makefile.am  Makefile.am.rej  bxutil-c.c  callbacks-c.c  creation.c  ext18list.c  util-c.c
demos/programs/FontSel/: Makefile.am  Makefile.am.rej  callbacks-c.c  creation-c.c  fontsel.c
demos/programs/IconB/: Makefile.am  Makefile.am.rej  iconbuttondemo.c  misc.c
demos/unsupported/: Makefile.am
doc/: BUILD.md  CMakeLists.txt  LOCALIZATION.md  LOGGING_CONFIGURATION.md
doc/guide/: 01-motif-architecture-overview.md  02-drawing-and-rendering-system.md  03-widget-system-architecture.md  04-practical-widget-implementations.md  05-graphics-system-rendering-pipeline.md  06-actual-implementations-deep-dive.md  README.md
include/: CMakeLists.txt  Makefile.am  config.h.in  motif_system.h  motif_version.h  system_includes.h
include/Dt/: Editor.h  Help.h  MenuButton.h  Print.h  Term.h  TermPrim.h
src/examples/: CMakeLists.txt
tests/: BUILD_libs.bash  CMakeLists.txt  Imakefile  Log.c  LogConfig.c  Makefile.am  Makefile.bak  Png.c  RUN_auto  RUN_auto.bash  Svg.c  TEST_ENVIRONMENT_README.md  build.sh  revive_tests.sh  run_graphical_tests.sh  runner.c  setup_graphical_tests.sh  suites.h  testJpeg.c  testLog.c  tests  tests.trs
tests/Auto/: Makefile.bak
tests/DragAndDrop/: DNDDrop1.c  DNDDrop2.c  DNDDrop3.c  DNDIcon1.c  DNDIcon2.c  DNDLabel1.c  DNDProt1.c  DNDScale1.c  DNDScroll.c  DNDText1.c  DNDtest2.c  DNDtestGad1.c  Imakefile  README
tests/General/: Makefile.am  RUN_template  RUN_template.Man  RUN_template.sh
tests/I18N/: InputMethod1.c  InputMethod2.c
tests/Manual/: Imakefile  Makefile.bak
tests/Mrm/: ABrowse.uil  ABrowseP.h  Browse.h  FetchCL.c  FetchCL.scr  FetchCL.uil  FetchIL.scr  FetchIL.uil  FetchL.c  FetchW.c  FetchW.scr  FetchW.uil  FetchWloop.uil  HierN.c  Imakefile  OpenH.c  OpenH_mf1.uil  OpenH_mf3.uil  OpenH_vhws.uil  README  RegisterC.scr  RegisterC.uil  RegisterCA.c  RegisterN.c  convenience.c
tests/Performance/: Imakefile  README
tests/Toolkit/: Imakefile
tests/UTM/: UTMPrim1.c  UTMtransfer.h
tests/Xm/: testLogConfig.c  testXmFontList.c
tests/XmString/: FontList.h  FontListA  FontListA.c  FontListC  FontListC.c  Imakefile  Makefile.am  README  RUN  RUN.XmString  RUN.custom  RUN_failures  RendToProp.Scr  StringComp.h  StringConcat  StringConcat.Scr  StringCopy  StringCopy.Scr  StringCopy.c  StringDisp  StringDisp.c  StringDraw.Scr  StringEmpty  StringEmpty.c  StringEmpty.scr  StringExt  StringExt.Scr  StringExt.c  StringExt.c.backup  StringGLR.c  StringNext  StringParse  StringParse.c  StringRend.Scr  StringRend.c  StringTab.c  StringToByte  StringToByte.Scr  StringToByte.c  StringToCT.Scr  (+3 more)
tests/auto/: Makefile.am
tests/doc/: ClickKey.3X  CompareVisual.3X  DragSliderValue.3X  DragXYRelative.3X  Exit.3X  IconMenuPost.3X  IconMenuSelect.3X  KeyList.3X  LocatePointer.3X  LocatePointerXYAbs.3X  Manual.3X  ModifierList.3X  README  README.auto  ReleaseMB.3X  Wait.3X  WindowDeiconify.3X  WindowIconify.3X  WindowMenuPost.3X  WindowMove.3X  WindowNormalize.3X  WindowResize.3X  ch01.sm  ch06.sm  preface.sm  title.sm
tests/environment/: .bash_profile  .bashrc  .cshrc  .login  Makefile.am
tests/memory/: .purify.all  .purify.fa  .purify.fm  .purify.fu  .purify.leaks  .purify.ua  .purify.um
tests/mwm/: Imakefile
tests/visuals/: README
tools/wml/: CMakeLists.txt  Makefile.am  Makefile.am.rej  README  Uil.c  Uil.h  Uil.y  UilDBDef.h  UilKeyTab.h  UilLexPars.c  UilLexPars.h  UilSymGen.h  UilSymGen.h.stub  UilSymNam.h  motif.wml  wml.c  wml.h  wmldbcreate.c  wmllex.c  wmllex.l  wmlouth.c  wmloutkey.c  wmloutkey.c.orig  wmloutmm.c  wmloutmm.c.orig  wmloutp1.c  wmlparse.c  wmlparse.h  wmlparse.y  wmlresolve.c  wmlsynbld.c  wmluiltok.c  wmluiltok.l  wmlutils.c
(+5530 files in other folders)
